<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TCG Card Lookup</string>
    <string name="magic">Magic: The Gathering</string>
    <string name="yugioh">Yu-Gi-Oh!</string>
    <string name="pokemon">Pokemon</string>
    <string name="wowtcg">World of Warcraft TCG</string>
    <string name="cardfight">Cardfight Vanguard</string>
    <string name="productName">Product Name:</string>
    <string name="description">Description: </string>
    <string name="set">Set:</string>
    <string name="cardType">Card Type: </string>
    <string name="monsterType">Monster Type:</string>
    <string name="rarity">Rarity: </string>
    <string name="attribute">Attribute:</string>
    <string name="levelrank">Level/Rank:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="price">Price:</string>
    <string name="currency">$</string>
    <string name="search">Search</string>
    <string name="searching">Searching...</string>
    <string name="searchResults">Search Results: </string>
    <string name="setName">Set Name: </string>
    <string name="number">Number: </string>
    <string name="level">Level: </string>
    <string name="atkDef">Atk/Def: </string>


</resources>
