<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/main"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/productName"/>
        <EditText android:id="@+id/productName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/description"/>
        <EditText android:id="@+id/description"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/set"/>
            <Spinner android:id="@+id/setSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                      android:layout_weight="5"
                      android:layout_height="wrap_content"
                      android:text="@string/cardType"/>
            <TextView android:layout_width="0dp"
                      android:layout_weight="5"
                      android:layout_height="wrap_content"
                      android:text="@string/monsterType"/>
            </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <Spinner android:id="@+id/cardTypeSpinner"
                     android:layout_width="0dp"
                     android:layout_weight="5"
                     android:layout_height="wrap_content" />

            <Spinner android:id="@+id/monsterTypeSpinner"
                     android:layout_width="0dp"
                     android:layout_weight="5"
                     android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:id="@+id/rarityLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/rarity" />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <CheckBox android:id="@+id/common"
                      android:layout_width="0dp"
                      android:layout_weight="5"
                      android:layout_height="wrap_content"
                      android:text="Common"/>
                <CheckBox android:id="@+id/rare"
                      android:layout_width="0dp"
                      android:layout_weight="5"
                      android:layout_height="wrap_content"
                      android:text="Rare"/>
                </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <CheckBox android:id="@+id/superRare"
                          android:layout_width="0dp"
                          android:layout_weight="5"
                          android:layout_height="wrap_content"
                          android:text="Super Rare"/>
                <CheckBox android:id="@+id/ultra"
                          android:layout_width="0dp"
                          android:layout_weight="5"
                          android:layout_height="wrap_content"
                          android:text="Ultra Rare"/>
                </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <CheckBox android:id="@+id/secret"
                          android:layout_width="0dp"
                          android:layout_weight="5"
                          android:layout_height="wrap_content"
                          android:text="Secret Rare"/>
                <CheckBox android:id="@+id/ultimate"
                          android:layout_width="0dp"
                          android:layout_weight="5"
                          android:layout_height="wrap_content"
                      android:text="Ultimate Rare"/>
                </LinearLayout>
            <CheckBox android:id="@+id/ghost"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Ghost Rare"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/attribute" />
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <CheckBox android:id="@+id/dark"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Dark"/>
                    <CheckBox android:id="@+id/divine"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Divine"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <CheckBox android:id="@+id/earth"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Earth"/>
                    <CheckBox android:id="@+id/fire"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Fire"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <CheckBox android:id="@+id/light"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Light"/>
                    <CheckBox android:id="@+id/water"
                              android:layout_width="0dp"
                              android:layout_weight="5"
                              android:layout_height="wrap_content"
                              android:text="Water"/>
                </LinearLayout>
                <CheckBox android:id="@+id/wind"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Wind"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/levelRankLabel"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:text="@string/levelrank" />
                <TextView android:id="@+id/levelFrom"
                          android:layout_width="0dp"
                          android:layout_weight=".5"
                          android:layout_height="wrap_content"
                          android:text="@string/from" />
                <Spinner android:id="@+id/levelFromSpinner"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"/>
                <TextView android:id="@+id/levelTo"
                          android:layout_width="0dp"
                          android:layout_weight=".5"
                          android:layout_height="wrap_content"
                          android:text="@string/to" />
                <Spinner android:id="@+id/levelToSpinner"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/attackLabel"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:text="@string/attack" />
                <TextView android:id="@+id/attackFrom"
                          android:layout_width="0dp"
                          android:layout_weight=".5"
                          android:layout_height="wrap_content"
                          android:text="@string/from" />
                <Spinner android:id="@+id/attackFromSpinner"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"/>
                <TextView android:id="@+id/attackTo"
                          android:layout_width="0dp"
                          android:layout_weight=".5"
                          android:layout_height="wrap_content"
                          android:text="@string/to" />
                <Spinner android:id="@+id/attackToSpinner"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:orientation="horizontal">
            <TextView android:id="@+id/defenseLabel"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:text="@string/defense" />
            <TextView android:id="@+id/defenseFrom"
                      android:layout_width="0dp"
                      android:layout_weight=".5"
                      android:layout_height="wrap_content"
                      android:text="@string/from" />
            <Spinner android:id="@+id/defenseFromSpinner"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"/>
            <TextView android:id="@+id/defenseTo"
                      android:layout_width="0dp"
                      android:layout_weight=".5"
                      android:layout_height="wrap_content"
                      android:text="@string/to" />
            <Spinner android:id="@+id/defenseToSpinner"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content" />
        </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:id="@+id/priceLabel"
                          android:layout_width="0dp"
                          android:layout_weight=".5"
                          android:layout_height="wrap_content"
                          android:text="@string/price" />
                <Spinner android:id="@+id/priceConditionSpinner"
                         android:layout_width="0dp"
                         android:layout_weight=".75"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"/>
                <TextView android:id="@+id/currencyLabel"
                          android:layout_width="0dp"
                          android:layout_weight="0.1"
                          android:layout_height="wrap_content"
                          android:text="@string/currency" />
                <EditText android:id="@+id/priceEdit"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_marginRight="10dp"
                          android:layout_height="wrap_content" />
            </LinearLayout>
            <Button android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search"/>
            <TextView android:id="@+id/testURL"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>