<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/card_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="false"
        android:scrollHorizontally="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#910000"
        />
    <ImageView
        android:background="#ffd700"
        android:layout_width="fill_parent"
        android:layout_height="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <LinearLayout android:id="@+id/card_img"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <ProgressBar
                android:id="@+id/img_progress"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/card_detail_image"
                android:layout_width="fill_parent"
                android:layout_height="210dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/card_details"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/set_name_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/setName"/>
                <TextView
                    android:id="@+id/set_name"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/number_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/number"/>
                <TextView
                    android:id="@+id/number"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rarity_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/rarity"/>
                <TextView
                    android:id="@+id/rarity"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_type_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/cardType"/>
                <TextView
                    android:id="@+id/card_type"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/level_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/level"/>
                <TextView
                    android:id="@+id/level"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/atk_def_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/atkDef"/>
                <TextView
                    android:id="@+id/atk_def"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/price"/>
                <TextView
                    android:id="@+id/price"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="false"
                    android:scrollHorizontally="true"
                    android:layout_width="0dp"
                    android:layout_weight=".66"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>
    <ScrollView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ScrollView>


</LinearLayout>